--- a/index.html
+++ b/index.html
@@ -111,6 +111,65 @@
 
       <!-- /.row -->
 
+      <footer class="footer">
+        <div class="footer-content d-flex justify-content-between">
+            <div class="footer-content-item">
+                <h3>Features</h3>
+                <ul>
+                    <li>Staffing</li>
+                    <li>Employee records</li>
+                    <li>Leaves management</li>
+                    <li>Time tracking</li>
+                </ul>
+            </div>
+
+            <!-- <div class="footer-content-item">
+                <h3 class="footer-content-item-header">For Companies</h3>
+                <ul>
+                    <li class="footer-content-item">Browse Resumes</li>
+                    <li class="footer-content-item">Trust & Safety</li>
+                    <li class="footer-content-item">FAQ</li>
+                </ul>
+            </div>
+
+            <div class="footer-content-item">
+                <h3 class="footer-content-item-header">For Job Seekers</h3>
+                <ul>
+                    <li class="footer-content-item">Member Benefits</li>
+                    <li class="footer-content-item">Open Vacancies</li>
+                    <li class="footer-content-item">Submit CV</li>
+
+                </ul>
+            </div>
+
+            <div class="footer-content-item">
+                <h3 class="footer-content-item-header">Skillsquare</h3>
+                <ul>
+                    <li class="footer-content-item">About</li>
+                    <li class="footer-content-item">Contact</li>
+                    <li class="footer-content-item">News</li>
+                </ul>
+            </div>
+            <div class="footer-content-item">
+                <img src="./img/lang-icon.png" alt="lang-icon">
+                <select size="1" class="lang-select" name="" id="">
+                  <option value="Eng">English</option>
+                  <option value="Ger">German</option>
+              </select>
+            </div>
+        </div>
+        <div class="footer-footer d-flex justify-content-between">
+            <div>
+                <img src="./img/Footer-Logotype.png" alt="Logo">
+            </div>
+            <p>2019 Term of service | Privacy</p>
+            <div>
+                <img src="./img/fb.png" alt="fb_logo">
+                <img src="./img/LinkidnIcon.png" alt="link_logo" style="margin: 0 26px;">
+            </div>
+        </div> -->
+    </footer>
+
     </div>
 
     <script
