[READY] changes for block2 (#1)
* changes for block2

* remove css

* fix

--- a/index.html
+++ b/index.html
@@ -85,6 +85,52 @@
         </div>
       </div>
 
+      <div class="d-flex justify-content-center">
+        <div class="d-flex block-container block2">
+          <div class="col-8">
+            <div class="block2__left">
+              <img src="./img/Top.png" class="w-100" alt="top" />
+              <img src="./img/Clip.png" class="w-100" alt="Browser" />
+            </div>
+          </div>
+          <div class="col-4 block2__right">
+            <div class="block2__right__header">
+              Everything you need to get going
+            </div>
+
+            <div class="block2__right__list-item">
+              <img src="./img/pen_2.svg" alt="" class="icon-img" />
+              <span>Staffing Software</span>
+            </div>
+            <div class="block2__right__list-item">
+              <img src="./img/calendar.svg" alt="" class="icon-img" />
+              <span>Time off Manager</span>
+            </div>
+            <div class="block2__right__list-item">
+              <img src="./img/time_1.svg" alt="" class="icon-img" />
+              <span>Employee attendance tracker</span>
+            </div>
+            <div class="block2__right__list-item">
+              <img src="./img/paper_3.svg" alt="" class="icon-img" />
+              <span>HR employee database</span>
+            </div>
+            <div class="block2__right__list-item__dashboard-btn-container">
+              <img src="./img/settings_2.svg" alt="" class="icon-img" />
+              <span>
+                Dashboard
+                <div
+                  class="block2__right__list-item__dashboard-btn-container__dashboard-btn-block"
+                >
+                  <a
+                    href="#"
+                    class="block2__right__list-item__dashboard-btn-container__dashboard-btn-block__dashboard-btn"
+                    >Learn more <img src="./img/arrow.png" />
+                  </a></div
+              ></span>
+            </div>
+          </div>
+        </div>
+      </div>
      
       <div class="container">
         <div class="col-md-3">
@@ -131,17 +177,14 @@
                     <li class="footer-content-item">FAQ</li>
                 </ul>
             </div>
-
             <div class="footer-content-item">
                 <h3 class="footer-content-item-header">For Job Seekers</h3>
                 <ul>
                     <li class="footer-content-item">Member Benefits</li>
                     <li class="footer-content-item">Open Vacancies</li>
                     <li class="footer-content-item">Submit CV</li>
-
                 </ul>
             </div>
-
             <div class="footer-content-item">
                 <h3 class="footer-content-item-header">Skillsquare</h3>
                 <ul>
