--- a/index.html
+++ b/index.html
@@ -1,240 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="container-fluid">
-        <div class="top-nav">
-            <div class="row ">
-                <div class="col-md-auto pr-0">
-                    <div class="logo">
-                        <img src="./img/Logotype.png" alt="Logo" />
-                    </div>
-                </div>
-                <!-- .col-md -->
-                <div class="top-nav_menu col-md-auto pl-0 d-flex">
-                    <div class="nav-item d-flex justify-content-center align-items-center"><a href="#"> Features </a></div>
-                    <div class="nav-item d-flex justify-content-center align-items-center"><a href="#"> Browse resume </a></div>
-                    <div class="nav-item d-flex justify-content-center align-items-center"><a href="#"> FAQ </a></div>
-                </div>
-                <!-- /.col-md -->
-                <div class="col-md d-flex justify-content-end align-items-center">
-                    <ul class="top-nav_menu">
-                        <li><a href="#"> Sign In </a></li>
-                        <li><a href="#"> Sign Up </a></li>
-                    </ul>
-                </div>
-                <!-- /.col-md -->
+      <div class="top-nav">
+        <div class="row ">
+          <div class="col-md-auto pr-0">
+            <div class="logo">
+              <img src="./img/Logotype.png" alt="Logo" />
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md heading d-flex justify-content-center">
-                <div>
-                    <h1>Free HR Software Online.</h1>
-                </div>
+          </div>
+          <!-- .col-md -->
+          <div class="top-nav_menu col-md-auto pl-0 d-flex">
+            <div
+              class="nav-item d-flex justify-content-center align-items-center"
+            >
+              <a href="#"> Features </a>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md d-flex justify-content-center">
-                <div class="text">
-                    <p>Skillsquare brings easy-to-use free HR tools for startups.</p>
-                    <p>Hire, retain and manage remote teams.</p>
-                </div>
+            <div
+              class="nav-item d-flex justify-content-center align-items-center"
+            >
+              <a href="#"> Browse resume </a>
             </div>
+            <div
+              class="nav-item d-flex justify-content-center align-items-center"
+            >
+              <a href="#"> FAQ </a>
+            </div>
+          </div>
+          <!-- /.col-md -->
+          <div class="col-md d-flex justify-content-end align-items-center">
+            <ul class="top-nav_menu">
+              <li><a href="#"> Sign In </a></li>
+              <li><a href="#"> Sign Up </a></li>
+            </ul>
+          </div>
+          <!-- /.col-md -->
         </div>
+      </div>
 
-        <div class="row d-flex justify-content-center">
-            <div class="get-started-form">
-                <div class="col-md input-group mb-3">
-                    <input type="text" class="form-control tarted-form-input get-started__input" placeholder="Your email address" aria-label="Recipient's username" aria-describedby="button-addon2" />
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-secondary get-started__btn" type="button" id="button-addon2">
+      <div class="row">
+        <div class="col-md heading d-flex justify-content-center">
+          <div>
+            <h1 class="heading__header">Free HR Software Online.</h1>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md d-flex justify-content-center">
+          <div class="heading__text">
+            <p>Skillsquare brings easy-to-use free HR tools for startups.</p>
+            <p>Hire, retain and manage remote teams.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row d-flex justify-content-center">
+        <div class="get-started-form">
+          <div class="col-md input-group mb-3">
+            <input
+              type="text"
+              class="form-control tarted-form-input get-started__input"
+              placeholder="Your email address"
+              aria-label="Recipient's username"
+              aria-describedby="button-addon2"
+            />
+            <div class="input-group-append">
+              <button
+                class="btn btn-outline-secondary get-started__btn"
+                type="button"
+                id="button-addon2"
+              >
                 GET STARTED
               </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-      </div>
-
-      <div class="d-flex justify-content-center">
-        <div class="d-flex block-container block2">
-          <div class="col-8">
-            <div class="block2__left">
-              <img src="./img/Top.png" class="w-100" alt="top" />
-              <img src="./img/Clip.png" class="w-100" alt="Browser" />
-            </div>
-          </div>
-          <div class="col-4 block2__right">
-            <div class="block2__right__header">
-              Everything you need to get going
-            </div>
-
-            <div class="block2__right__list-item">
-              <img src="./img/pen_2.svg" alt="" class="icon-img" />
-              <span>Staffing Software</span>
-            </div>
-            <div class="block2__right__list-item">
-              <img src="./img/calendar.svg" alt="" class="icon-img" />
-              <span>Time off Manager</span>
-            </div>
-            <div class="block2__right__list-item">
-              <img src="./img/time_1.svg" alt="" class="icon-img" />
-              <span>Employee attendance tracker</span>
-            </div>
-            <div class="block2__right__list-item">
-              <img src="./img/paper_3.svg" alt="" class="icon-img" />
-              <span>HR employee database</span>
-            </div>
-            <div class="block2__right__list-item__dashboard-btn-container">
-              <img src="./img/settings_2.svg" alt="" class="icon-img" />
-              <span>
-                Dashboard
-                <div
-                  class="block2__right__list-item__dashboard-btn-container__dashboard-btn-block"
-                >
-                  <a
-                    href="#"
-                    class="block2__right__list-item__dashboard-btn-container__dashboard-btn-block__dashboard-btn"
-                    >Learn more <img src="./img/arrow.png" />
-                  </a></div
-              ></span>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="container">
-        <div class="col-md-3">
-            <img alt="AltText" src="./img/Top.png" class="img-fluid">
-            <img src="./img/Clip.png" alt="Browser" class="img-fluid" />
+    <div class="d-flex justify-content-center">
+      <div class="d-flex block-container block2">
+        <div class="col-8">
+          <div class="block2__left">
+            <img src="./img/Top.png" class="w-100" alt="top" />
+            <img src="./img/Clip.png" class="w-100" alt="Browser" />
+          </div>
+        </div>
+        <div class="col-4 block2__right">
+          <div class="block2__right__header">
+            Everything you need to get going
+          </div>
+
+          <div class="block2__right__list-item">
+            <img src="./img/pen_2.svg" alt="" class="icon-img" />
+            <span>Staffing Software</span>
+          </div>
+          <div class="block2__right__list-item">
+            <img src="./img/calendar.svg" alt="" class="icon-img" />
+            <span>Time off Manager</span>
+          </div>
+          <div class="block2__right__list-item">
+            <img src="./img/time_1.svg" alt="" class="icon-img" />
+            <span>Employee attendance tracker</span>
+          </div>
+          <div class="block2__right__list-item">
+            <img src="./img/paper_3.svg" alt="" class="icon-img" />
+            <span>HR employee database</span>
+          </div>
+          <div class="block2__right__list-item__dashboard-btn-container">
+            <img src="./img/settings_2.svg" alt="" class="icon-img" />
+            <span>
+              Dashboard
+              <div
+                class="block2__right__list-item__dashboard-btn-container__dashboard-btn-block"
+              >
+                <a
+                  href="#"
+                  class="block2__right__list-item__dashboard-btn-container__dashboard-btn-block__dashboard-btn"
+                  >Learn more <img src="./img/arrow.png" />
+                </a></div
+            ></span>
+          </div>
+        </div>
       </div>
-     
-        <!-- /.row -->
-        <footer class="footer">
-            <div class="row">
-                <div class="footer-content col-md d-flex justify-content-between">
-                    <div class="col-md-auto footer-content-item">
-                        <h4 class="footer-content-item-header">Features</h3>
-                            <ul>
-                                <li> <a href="#">Staffing</a> </li>
-                                <li> <a href="#">Employee records</a> </li>
-                                <li> <a href="#">Leaves management</a> </li>
-                                <li> <a href="#">Time tracking</a> </li>
-                            </ul>
-                    </div>
-                    <div class="col-md-auto footer-content-item">
-                        <h4 class="footer-content-item-header">For Companies</h3>
-                            <ul>
-                                <li>Browse Resumes</li>
-                                <li>Trust & Safety</li>
-                                <li>FAQ</li>
-                            </ul>
-                    </div>
-                    <div class="col-md-auto footer-content-item">
-                        <h4 class="footer-content-item-header">For Job Seekers</h3>
-                            <ul>
-                                <li>Member Benefits</li>
-                                <li>Open Vacancies</li>
-                                <li>Submit CV</li>
-                            </ul>
-                    </div>
+    </div>
 
-                    <div class="col-md-auto footer-content-item">
-                        <h4 class="footer-content-item-header">Skillsquare</h3>
-                            <ul>
-                                <li>About</li>
-                                <li>Contact</li>
-                                <li>News</li>
-                            </ul>
-                    </div>
-
-                    <div class="footer-content-item col-md ">
-                        <div class="d-flex justify-content-end">
-                            <img src="./img/lang-icon.png" alt="lang-icon">
-                            <select size="1" class="lang-select" name="" id="">
-                        <option value="Eng">English</option>
-                        <option value="Ger">German</option>
-                    </select>
-                        </div>
-
-                    </div>
+    <div class="row">
+        <div class="col-md image-block d-flex flex-column justify-content-center align-items-center">
+            <div class="image-block__text">
+                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris quis nostrud nisi ut aliquip ex ea commodo
+                    consequat.”
+                </p>
+            </div>
+            <div>
+                <p class="image-block__author">Artur Demyanov, Designer</p>
+            </div>
+    
+            <div class="dots-block d-flex justify-content-center">
+                <div class="dot">
+                </div>
+                <div class="dot-not-active">
+                </div>
+                <div class="dot-not-active">
                 </div>
             </div>
+        </div>
+    </div>
 
-            <div class="row">
-                <div class="col-md footer-footer d-flex justify-content-between">
-                    <div>
-                        <img src="./img/Footer-Logotype.png" alt="Logo">
-                    </div>
-                    <p>2019 Term of service | Privacy</p>
-                    <div>
-                        <img src="./img/fb.png" alt="fb_logo">
-                        <img src="./img/LinkidnIcon.png" alt="link_logo" style="margin: 0 26px;">
-                    </div>
-                </div>
-            </div>
+   
 
 
-            <!-- <div class="footer-content-item">
-                <h3 class="footer-content-item-header">For Companies</h3>
-                <ul>
-                    <li class="footer-content-item">Browse Resumes</li>
-                    <li class="footer-content-item">Trust & Safety</li>
-                    <li class="footer-content-item">FAQ</li>
-                </ul>
+    <div class="row sign-up-block ">
+      <div class="sign-up-block col-md">
+        <div class="sign-up-block__content">
+          <h3 class="sign-up-block-header">Get started in seconds</h3>
+          <p class="sign-up-block-text col-md-8">
+            Skillsquare is supposed to be a forever-free tool for startup
+            founders and CEOs to save their time while hiring and managing
+            remote teams. It's pretty simple. Give it a try.
+          </p>
+          <div class="btn-block">
+            <a href="#" class="btn btn-light btn-white-safe">Sign up</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="footer-nav">
+        <div class="row">
+          <div class="footer-content col-md d-flex justify-content-between">
+            <div class="col-md-auto footer-content-item">
+              <h3 class="footer-content-item-header">Features</h3>
+              <ul>
+                <li><a href="#">Staffing</a></li>
+                <li><a href="#">Employee records</a></li>
+                <li><a href="#">Leaves management</a></li>
+                <li><a href="#">Time tracking</a></li>
+              </ul>
             </div>
-            <div class="footer-content-item">
-                <h3 class="footer-content-item-header">For Job Seekers</h3>
-                <ul>
-                    <li class="footer-content-item">Member Benefits</li>
-                    <li class="footer-content-item">Open Vacancies</li>
-                    <li class="footer-content-item">Submit CV</li>
-                </ul>
+            <div class="col-md-auto footer-content-item">
+              <h3 class="footer-content-item-header">For Companies</h3>
+              <ul>
+                <li>Browse Resumes</li>
+                <li>Trust & Safety</li>
+                <li>FAQ</li>
+              </ul>
             </div>
-            <div class="footer-content-item">
-                <h3 class="footer-content-item-header">Skillsquare</h3>
-                <ul>
-                    <li class="footer-content-item">About</li>
-                    <li class="footer-content-item">Contact</li>
-                    <li class="footer-content-item">News</li>
-                </ul>
+            <div class="col-md-auto footer-content-item">
+              <h3 class="footer-content-item-header">For Job Seekers</h3>
+              <ul>
+                <li>Member Benefits</li>
+                <li>Open Vacancies</li>
+                <li>Submit CV</li>
+              </ul>
             </div>
-            <div class="footer-content-item">
-                <img src="./img/lang-icon.png" alt="lang-icon">
+
+            <div class="col-md-auto footer-content-item">
+              <h3 class="footer-content-item-header">Skillsquare</h3>
+              <ul>
+                <li>About</li>
+                <li>Contact</li>
+                <li>News</li>
+              </ul>
+            </div>
+
+            <div class="footer-content-item col-md ">
+              <div class="d-flex justify-content-end">
+                <img src="./img/lang-icon.png" alt="lang-icon" />
                 <select size="1" class="lang-select" name="" id="">
                   <option value="Eng">English</option>
                   <option value="Ger">German</option>
-              </select>
+                </select>
+              </div>
             </div>
+          </div>
         </div>
-        <div class="footer-footer d-flex justify-content-between">
+
+        <div class="row">
+          <div class="col-md footer-footer d-flex justify-content-between">
             <div>
-                <img src="./img/Footer-Logotype.png" alt="Logo">
+              <img src="./img/Footer-Logotype.png" alt="Logo" />
             </div>
             <p>2019 Term of service | Privacy</p>
             <div>
-                <img src="./img/fb.png" alt="fb_logo">
-                <img src="./img/LinkidnIcon.png" alt="link_logo" style="margin: 0 26px;">
+              <img src="./img/fb.png" alt="fb_logo" />
+              <img
+                src="./img/LinkidnIcon.png"
+                alt="link_logo"
+                style="margin: 0 26px;"
+              />
             </div>
-        </div> -->
-        </footer>
+          </div>
+        </div>
+      </div>
+      <!-- /.footer-nav -->
+    </footer>
 
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
