--- a/index.html
+++ b/index.html
@@ -145,45 +145,54 @@
     </div>
 
     <div class="better-block">
-        <div class="row">
-            <div class="col-4 offset-2 left-block">
-                <div class="d-flex">
-                    <div class="col-auto black-icon d-flex justify-content-center align-items-center">
-                        <img src="./img/decisions-icon.png" alt="" class="black-icon__image">
-                    </div>
-                    <div class="describe-position">
-                        <h4>Better Decisions</h4>
-                        <p>Collect, interview and compare potential hires.</p>
-                    </div>
-                </div>
+        <div class="row better-block">
+            <div class="col-md-5">
+                <ul>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-auto">
+                                <div class=" black-icon d-flex justify-content-center align-items-center">
+                                    <img src="./img/decisions-icon.png" alt="" class="black-icon__image">
+                                </div>
+                            </div>
 
-                <div class="d-flex">
-                    <div class="col-auto black-icon d-flex justify-content-center align-items-center">
-                        <img src="./img/zig-zag.png" alt="" class="black-icon__image-zig-zag">
-                    </div>
-                    <div class="describe-position">
-                        <h4 class="">Better Operations</h4>
-                        <p class="">Always be on top of what your employees are up to. Keep them disciplined and engaged without micromanagement.</p>
-                    </div>
-                </div>
+                            <div class="col-md-6 better-block__list-text">
+                                <h4>Better Decisions</h4>
+                                <p>Collect, interview and compare potential hires.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-auto">
+                                <div class=" black-icon d-flex justify-content-center align-items-center">
+                                    <img src="./img/zig-zag.png" alt="" class="black-icon__image-zig-zag">
+                                </div>
+                            </div>
 
+                            <div class="col-md-6 better-block__list-text">
+                                <h4>Better Operations</h4>
+                                <p>Always be on top of what your employees are up to. Keep them disciplined and engaged without micromanagement.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-auto">
+                                <div class=" black-icon d-flex justify-content-center align-items-center">
+                                    <img src="./img/Sheild@2x.png.png" alt="" class="black-icon__image-shield">
+                                </div>
+                            </div>
 
-                <div class="d-flex">
-                    <div class="col-auto black-icon d-flex justify-content-center align-items-center">
-                        <img src="./img/Sheild@2x.png.png" alt="" class="black-icon__image-shield">
-                    </div>
-                    <div class="describe-position">
-                        <h4>Better Communication</h4>
-                        <p class="">Engage with your remote teams effortlessly. Communicate on all work conditions within the tool. </p>
-                    </div>
-                </div>
-
-
-
-
+                            <div class="col-md-6 better-block__list-text">
+                                <h4>Better Communication</h4>
+                                <p>Engage with your remote teams effortlessly. Communicate on all work conditions within the tool.</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <!-- /.col-md-3 -->
-            <div class="col-4 offset-1">
+            <div class="col-md-6">
                 <div class="right-block">
                     <h1 class="right-block__header">
                         Yours company data is safe at SkillSquare
