Fixing blocks margings

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="icon-container">
                     <img class="icon-benefits" src="./img/icon.staffing.svg" alt="Staffing Icon">
                 </div>
-                <div class="d-flex align-items-stretch text-container better-block__list-text">
+                <div class="text-container better-block__list-text">
                   <h4>Staffing Software</h4>
                   <p>
                     List, sort and compare CV, make notes, set statuses. Never miss
@@ -173,7 +173,7 @@
                 <div class="icon-container">
                     <img class="icon-benefits" src="./img/icon.time.tracking.svg" alt="Time Tracking Icon">
                 </div>
-                <div class="d-flex align-items-stretch text-container better-block__list-text">
+                <div class="text-container better-block__list-text">
                   <h4>Employee Time Tracking</h4>
                   <p>
                     Track employee time, attendance, accept or reject time off.
@@ -190,7 +190,7 @@
                 <div class="icon-container">
                     <img class="icon-benefits" src="./img/icon.vacation.mamagement.svg" alt="Vacation Management Icon">
                 </div>
-                <div class="d-flex align-items-stretch text-container better-block__list-text">
+                <div class="text-container better-block__list-text">
                   <h4>Vacation Management</h4>
                   <p>
                     oportere patrioque sit et, eum ne prima nemore perfecto. Eu cibo
